--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -9,7 +9,8 @@
     margin-bottom: 10%;
     align-items: center;
     transition: 0.4s ease-out;
-    padding: 10%;
+    padding: 5%;
+    text-size-adjust: auto;
    }
 
 /*Text*/
@@ -23,5 +24,7 @@
     font-size: 0.9rem;
     margin: 5px 0 15px 0;
    }
-   
+.col{
+  text-align: -webkit-center;
+}
 
