--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,12 +7,18 @@
 }
 .body {
   font-style: normal;
-  background-color:#e0e0e0;
+  background-color: #e0e0e0;
 }
 .h1 {
-  color:black;
-  font-size: '1.5rem';
+  color: black;
+  font-size: "1.5rem";
   text-align: center;
+}
+.h2 {
+  color: black;
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 97%;
 }
 .p {
   color: black;
@@ -37,12 +43,16 @@
     filter: invert(1);
   }
 }
-.title{
+.title {
   margin: 5%;
 }
 @media only screen and (min-width: 600px) {
-  .title{
+  .title {
     margin: 10px 2px 30px 2px;
   }
 }
-
+.privacybody {
+  margin-left: 3%;
+  margin-right: 2%;
+  text-align: justify;
+}
