--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,10 +8,11 @@
 .body {
   font-style: normal;
   background-color: #e0e0e0;
+  font-family: 'Antonio', sans-serif;
 }
 .h1 {
-  color: black;
-  font-size: "1.5rem";
+  color: #322CFF;
+  font-size: 2rem;
   text-align: center;
 }
 .h2 {
@@ -24,17 +25,16 @@
   color: black;
   text-align: center;
 }
+.privacybody{
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.aboutimage{
 
-/*@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}*/
-
+}
 @media (prefers-color-scheme: dark) {
   .footer {
-    border-color: #222;
+    margin-color: #222;
   }
   .code {
     background: #111;
@@ -46,13 +46,17 @@
 .title {
   margin: 5%;
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 800px) {
+  .privacybody {
+    margin-left: 180px;
+    margin-top: 20px;
+    margin-right: 180px;
+    text-align: justify;
+  }
   .title {
     margin: 10px 2px 30px 2px;
   }
-}
-.privacybody {
-  margin-left: 3%;
-  margin-right: 2%;
-  text-align: justify;
+  .a{
+    text-decoration: none;
+  }
 }
