--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -6,12 +6,11 @@
     align-items: center;
   }
   .body {
-    font-style: normal;
-    background-color: #e0e0e0;
+    background-color: var(--cor-secundaria);
     font-family: 'Antonio', sans-serif;
+    font-style: normal;
   }
   .title{
-    font-style: normal;
   }
   .center{
     display: block;
@@ -20,22 +19,23 @@
     width: 80%;
   }
   .h1 {
-    color: #322CFF;
+    color:var(--cor-principal);
     font-size: 2rem;
     text-align:left;
     text-transform:uppercase;
     font-weight: bold;
   }
   .h2 {
-    color: black;
+    color:var(--cor-terciaria);
     font-size: 1rem;
     text-align:left;
     margin-bottom: 10px;
   }
   .h3{
+
   }
   .p {
-    color: black;
+    color:var(--cor-terciaria);
     font-size: 0.75rem;
     text-align: justify;
     font-style: italic;
@@ -62,12 +62,16 @@
         width: auto;
       }
     .h1 {
-    font-size: 4rem;
+      font-size: 4rem;
     }
     .h2 {
         font-size: 2rem;
       }
     .p{
-    font-size: 1.7rem;
+      font-size: 1.7rem;
+    }
+    .heroContent{
+      width: auto;
+      height: auto;
     }
 }
