--- a/styles/Navbarhome.module.scss
+++ b/styles/Navbarhome.module.scss
@@ -9,11 +9,14 @@
     text-transform: uppercase;
     text-decoration: none;
     color:#FFFFFF;
+    flex-direction: column;
+    width: fit-content;
 }
 .navbar .navbarbrand{
     color:#FFFFFF;
     font-style: large;
-    font-weight: 400;
+    font-weight: 600;
+    padding-right: 20px;
 
 }
 .navbar span{
@@ -33,4 +36,13 @@
     text-transform:capitalize;
     text-decoration: none;
     color: #ffffffc0;
+}
+.navbar svg{
+    font-size: 1.5rem;
+    content: icon;
+    :hover{
+        cursor: pointer;
+        color: black;
+        transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+    }
 }
